# lattice

./: .gitignore  Cargo.toml  README.md  deny.toml  devenv.nix  zellij.kdl
.cargo/: config.toml
.cursor/: mcp.json
.github/workflows/: ci.yml  dependencies.yml  pr.yml  release.yml
.serena/: project.yml
.taskmaster/: state.json
.taskmaster/docs/: prd.txt
.taskmaster/tasks/: tasks.json
compiler/: Cargo.toml
compiler/src/: code_generator.rs  error.rs  lexer.rs  lib.rs  main.rs  parser.rs  type_checker.rs
pm/: Cargo.toml
pm/src/: build.rs  dependency.rs  lib.rs  main.rs  package.rs  registry.rs
prompts/: 01-project-setup-and-architecture.md  01_code_review.md  02_architecture_design.md  03_performance_optimization.md  04_security_audit.md  05_testing_strategy.md  06_documentation_creation.md  07_deployment_strategy.md  08_project_management.md  testing.md
stdlib/: Cargo.toml
stdlib/src/: effects.rs  functions.rs  lib.rs  types.rs
