[workspace]
resolver = "2"
members = [
    "compiler",
    "pm", 
    "stdlib"
]

# Enhanced build profiles for better development and production builds
[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
codegen-units = 16
panic = "unwind"

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release-lto]
inherits = "release"
lto = "fat"
codegen-units = 1

# Development profile with optimizations for faster builds
[profile.dev-opt]
inherits = "dev"
opt-level = 1
debug = true
debug-assertions = true
overflow-checks = true

# Test profile for faster test execution
[profile.test]
inherits = "dev"
opt-level = 1
debug = true
