[package]
name = "lattice-compiler"
version = "0.1.0"
edition = "2021"
description = "Compiler for the Lattice functional programming language"
authors = ["Lattice Team"]
license = "Unlicense"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
anyhow = "1.0"
codespan-reporting = "0.11.1"
wasm-encoder = "0.33.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
rustc_version = "0.4.1"
wasmtime = "35.0.0"

[dev-dependencies]
proptest = "1.2.0" 
