[package]
name = "lattice-pm"
version = "0.1.0"
edition = "2021"
description = "Package manager for the Lattice language ecosystem"
authors = ["Lattice Team"]
license = "Unlicense"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
toml = "0.8"
dirs = "5.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.8" 