[package]
name = "lattice-stdlib"
version = "0.1.0"
edition = "2021"
description = "Standard library for the Lattice language"
authors = ["Lattice Team"]
license = "Unlicense"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
name = "lattice_stdlib"
crate-type = ["lib"] 