[package]
name = "lattice-stdlib"
version = "0.1.0"
edition = "2021"
description = "Standard library for the Lattice functional programming language"
authors = ["Lattice Language Team"]
license = "MIT"
repository = "https://github.com/lattice-lang/lattice"
keywords = ["standard-library", "language", "functional-programming", "effects"]
categories = ["development-tools", "utilities"]
readme = "README.md"
homepage = "https://lattice-lang.org"
documentation = "https://docs.lattice-lang.org"
rust-version = "1.70"

[dependencies]
# Serialization for configuration and data exchange
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Utilities for standard library functionality
once_cell = "1.18"
parking_lot = "0.12"

# Optional dependencies for extended functionality
regex = { version = "1.10", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
uuid = { version = "1.6", features = ["v4", "serde"], optional = true }
proptest = { version = "1.2.0", optional = true }
criterion = { version = "0.5", features = ["html_reports"], optional = true }

[dev-dependencies]

[features]
default = ["std"]
std = ["regex", "chrono", "uuid"]
minimal = []
testing = ["proptest", "criterion"]

[lib]
name = "lattice_stdlib"
crate-type = ["lib", "rlib"] 